--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "git": "^0.1.5",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1"
   },
   "devDependencies": {
